# mvsanywhere

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  README_fmvs.md  create_sequence_video.py  create_sequential_kitti.py  create_sequential_tnt.py  dust3r_waymo_preprocess.py  environment.yml  eval.py  kitti_sequence.robustmvd.mvd.pickle  scan_dict.json  setup.py  test.ply  tnt_sequence.robustmvd.mvd.pickle
configs/bash_scripts/: infer_meshes_for_rendering.sh  infer_meshes_for_rendering_SR--.sh  run_base_model.sh  run_base_model_hint_trained.sh  run_base_model_sampled_weights.sh  run_base_model_sampled_weights_hero.sh  run_base_model_sampled_weights_hero_single_MLP.sh  run_base_model_sep_mlp.sh  run_base_model_sep_mlp_025.sh  run_base_model_sep_mlp_big_model.sh  run_densification_baseline.sh  run_sampled_weights_hero_single_MLP_partial.sh
configs/data/: 7scenes_default.yaml  7scenes_default_offline.yaml  7scenes_dense.yaml  colmap_dense.yaml  neucon_arkit_default.yaml  neucon_arkit_dense.yaml  scannet_default_test.yaml  scannet_default_test_planes.yaml  scannet_default_test_ray.yaml  scannet_default_train.yaml  (+8 more)
scripts/: baseline_export_single_wall_meshes.py  create_visibility_volume.py  dust3r_waymo_preprocess.py  evaluation.py  fuse_dvmvs.py  mvssynth_vis.py  strip_checkpoint.py
src/regsplatfacto/: pyproject.toml
src/regsplatfacto/regsplatfacto/: meshing.py  regsplatfacto_config.py  regsplatfacto_model.py  render_for_meshing.py  utils.py
src/regsplatfacto/regsplatfacto/data/: mvsanywhere_dataset.py  regsplatfacto_datamanager.py
(+353 files in other folders)
